# pptx-localizer

./: README.md  pyproject.toml  requirements.lock.txt
src/pptx_linguistic_tool/: __main__.py
src/pptx_linguistic_tool/config/: constants.py
src/pptx_linguistic_tool/core/audio/: audio_converter.py  transcriber.py  tts_generator.py
src/pptx_linguistic_tool/core/extraction/: slide_text_extractor.py
src/pptx_linguistic_tool/core/reintegration/: reintegrator_all.py
src/pptx_linguistic_tool/core/translation/: nllb_model.py  translator_interface.py
src/pptx_linguistic_tool/utils/: cleanup.py  ffmpeg_utils.py  logging_utils.py  preprocessing.py  term_map.json
